syntax = "proto3";

package org.corfudb.infrastructure.logreplication.proto;

import "corfu_options.proto";
import "google/protobuf/timestamp.proto";

/**
 * This is used by replication metadata table in corfu store.
 * The metadata table has the following key-value pairs defined both as strings:
 * One example to show the standby is at log entry sync state:
 * "topologyConfigId": "0"
 * "version": "release-1.0"
 * "lastSnapshotStarted": "100"
 * "lastSnapshotTransferredSeqNumber": "88"
 * "lastSnapshotTransferred": "100"
 * "lastSnapshotApplied": "100"
 * "lastLogEntryProcessed": "168"
 */
message LogReplicationMetadataKey {
  string key = 1;
}

/**
 * This is corresponding values for the keys in the replication
 * metadata table in corfu store. For example:
 * key: "topologyConfigId", val: "1".
 */
message LogReplicationMetadataVal {
  string val = 1;
}

message ReplicationEventKey {
  string key = 1;
}

message ReplicationEvent {
  option (org.corfudb.runtime.table_schema).stream_tag = "log_replication";

  enum ReplicationEventType {
    FORCE_SNAPSHOT_SYNC = 0;
  }
  string clusterId = 1;
  string eventId = 2;
  ReplicationEventType type = 3;
}

enum ReplicationModel {
  FULL_TABLE = 0;                 // Full table replication (Single Source to Single Sink = 1:1)
  ROUTING_QUEUES = 1;             // Routing queue replication (used for entry-level replication) (1:1)
  LOGICAL_GROUPS = 2;             // Table association to logical group (1:1)
  MULTI_SOURCE_MERGE = 3;         // Same table replication from multiple sources to single sink (n:1)
}